// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDismissibleChip should ignore setting a trailing accessory view, resulting in a close icon 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--default bpk-chip--default-selected bpk-chip--default-dismissible"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        class="bpk-chip--default-dismissible__trailing-accessory-view"
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should override setting selected={true}, resulting in selected={false} 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--default bpk-chip--default-selected bpk-chip--default-dismissible"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        class="bpk-chip--default-dismissible__trailing-accessory-view"
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--default bpk-chip--default-selected bpk-chip--default-dismissible"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        class="bpk-chip--default-dismissible__trailing-accessory-view"
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--default bpk-chip--default-selected bpk-chip--default-dismissible custom-class"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        class="bpk-chip--default-dismissible__trailing-accessory-view"
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="default" 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--default bpk-chip--default-selected bpk-chip--default-dismissible"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        class="bpk-chip--default-dismissible__trailing-accessory-view"
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="default" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--default bpk-chip--default-selected bpk-chip--default-dismissible"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        class="bpk-chip--default-dismissible__trailing-accessory-view"
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="default" and disabled 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--default bpk-chip--disabled bpk-chip--default-disabled bpk-chip--default-dismissible"
    disabled=""
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        class="bpk-chip--default-dismissible__trailing-accessory-view"
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="onDark" 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--onDark bpk-chip--onDark-selected bpk-chip--onDark-dismissible"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        class="bpk-chip--onDark-dismissible__trailing-accessory-view"
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="onDark" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--onDark bpk-chip--onDark-selected bpk-chip--onDark-dismissible"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        class="bpk-chip--onDark-dismissible__trailing-accessory-view"
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="onDark" and disabled 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--onDark bpk-chip--disabled bpk-chip--onDark-disabled bpk-chip--onDark-dismissible"
    disabled=""
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        class="bpk-chip--onDark-dismissible__trailing-accessory-view"
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="onImage" 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--onImage bpk-chip--onImage-selected bpk-chip--onImage-dismissible"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        class="bpk-chip--onImage-dismissible__trailing-accessory-view"
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="onImage" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--onImage bpk-chip--onImage-selected bpk-chip--onImage-dismissible"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        class="bpk-chip--onImage-dismissible__trailing-accessory-view"
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="onImage" and disabled 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--onImage bpk-chip--disabled bpk-chip--onImage-disabled bpk-chip--onImage-dismissible"
    disabled=""
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        class="bpk-chip--onImage-dismissible__trailing-accessory-view"
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;
